# gatekeeper

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  RUN-DEMO.bat  SECURITY.md  SHOW-LOGBOOK.bat  STRUCTURE.md  VERIFY-LOGBOOK.bat  alembic.ini  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
config/: identities.yaml  platform.yaml  product.yaml  upstreams.yaml
deploy/container/: entrypoint.sh  platform.yaml
docs/: HOW-IT-WORKS.md  README.md  SHOWCASE-AZURE.md
docs/deploy/: azure-container-apps.md
docs/features/: config-driven-any-server.md  container-deploy.md  http-transport.md  ledger.md  observability.md  oidc-identity.md  proxy.md  rbac.md  tamper-evidence.md
docs/runbooks/: connector-onboarding.md
examples/: __init__.py  demo_file_server.py
policies/: gatekeeper.cedar
scripts/: __init__.py  demo.py  demo_enterprise.py  deploy_azure.sh
src/gatekeeper/: __init__.py
src/gatekeeper/adapters/: __init__.py
src/gatekeeper/adapters/identity/: __init__.py  oidc.py  static_token.py
src/gatekeeper/adapters/ledger/: __init__.py  factory.py  hashchain.py  sqlite.py
src/gatekeeper/adapters/llm/: __init__.py
src/gatekeeper/adapters/policy/: __init__.py  cedar.py
src/gatekeeper/adapters/upstream/: __init__.py  mcp_client.py
src/gatekeeper/ai/: __init__.py
src/gatekeeper/approval/: __init__.py
src/gatekeeper/audit/: __init__.py
src/gatekeeper/cli/: __init__.py  app.py
src/gatekeeper/config/: __init__.py  loader.py
src/gatekeeper/db/: __init__.py  base.py  models.py
src/gatekeeper/db/migrations/: env.py
src/gatekeeper/db/migrations/versions/: 0001_create_ledger.py
src/gatekeeper/domain/: __init__.py  classify.py  errors.py
src/gatekeeper/gateway/: __init__.py  factory.py  pipeline.py
src/gatekeeper/infra/: __init__.py  alerts.py  logging.py  metrics.py  tracing.py
src/gatekeeper/ports/: __init__.py  identity.py  ledger.py  llm.py  policy.py  upstream.py
src/gatekeeper/prompts/: __init__.py  risk_classifier.yaml
src/gatekeeper/schemas/: __init__.py  enums.py  ledger.py  models.py
src/gatekeeper/transport/: __init__.py  http_server.py  stdio_server.py  surface.py
tests/: README.md  conftest.py
tests/adversarial/: test_governance_gaps.py  test_proxy_governance.py
tests/eval/: bench_governance_latency.py  bench_transport_overhead.py
tests/golden/: rbac_golden.yaml  test_rbac_golden.py
tests/integration/: http_harness.py  test_any_server.py  test_demo_enterprise.py  test_http_transport.py  test_ledger.py  test_migration.py  test_oidc_http.py  test_proxy.py  test_upstream_lifecycle.py  test_upstream_secret_injection.py
tests/unit/: test_classify.py  test_cli_seed_demo.py  test_cli_serve.py  test_cli_show.py  test_cli_tail.py  test_contracts.py  test_foundation.py  test_hashchain.py  test_http_seams.py  test_identity.py  test_identity_oidc.py  test_ledger_factory.py  test_observability.py  test_payload_hash.py  test_pipeline.py  test_policy.py  test_summarize.py  test_upstream_launch.py  test_upstream_secrets.py
