[project]
name = "gatekeeper"
version = "0.0.1"
description = "GateKeeperAI — a tool-agnostic, verifiable governance gateway for MCP. Every tool call authenticated, RBAC-checked, approved-on-write, and recorded in a tamper-evident hash-chained ledger."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Kishore" }]
keywords = ["mcp", "model-context-protocol", "governance", "gateway", "rbac", "audit", "ai-security"]

# --- Runtime (prod) dependencies. Pins added in /foundation when first installed. ---
dependencies = [
  "mcp",                 # official Model Context Protocol SDK (server + client)
  "pydantic>=2.13.4",         # typed contracts / DTOs
  "pydantic-settings>=2.14.1",# .env-driven settings (no hardcoding)
  "pyyaml>=6.0.3",           # YAML config loader
  "typer>=0.12",         # operator CLI
  "rich>=15.0.0",            # CLI output
  "fastapi>=0.136.3",      # HTTP MCP transport + (M2) approval API
  "uvicorn[standard]>=0.49.0",
  "httpx>=0.27",         # async HTTP for upstream/LLM
  "sqlalchemy>=2.0.50",       # ledger persistence
  "alembic>=1.18.4",       # DB migrations (never hand-edit schema)
  "cedarpy",             # Cedar policy engine (policy-as-code, analyzable)
]

[project.optional-dependencies]
# M2 AI layer — install only when building risk-scoring. Keeps M1 lean.
ai = ["anthropic>=0.107.1"]

[dependency-groups]
# Dev/test tooling — NOT shipped to prod.
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
  "mypy>=2.1.0",
  "types-PyYAML",
  "pip-audit>=2.10.0",
  "pre-commit>=4.6.0",
]

[project.scripts]
gatekeeper = "gatekeeper.cli.app:app"   # `gatekeeper serve|tail|verify|show`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gatekeeper"]

# --- src-layout so the installed package == the tested package -------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]  # incl. flake8-bandit (S) for security lint
ignore = ["S101"]                                   # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["gatekeeper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
